laying out html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
   <div class="container">
     <h1>Panda Nawari The
-      <span class="txt-type" data-wait="3200"></span>
+      <span class="txt-type" data-wait="3200" data-words='["Software Engineer", "Designer", "Freelancer"]'></span>
     </h1>
+    <h2>Welcome To My Website</h2>
   </div>
 </body>
 </html>
