--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <span class="txt-type" data-wait="3200" data-words='["Software Engineer", "Designer", "Freelancer"]'></span>
     </h1>
     <h2>Welcome To My Website</h2>
+    <h3>Whatever It Takes I Will Make It.</h3>
   </div>
 
   <script src="main.js"></script>
